Update 13 - B1 Pit 2.md

--- a/rooms/Automation/Escape/13 - B1 Pit 2.md
+++ b/rooms/Automation/Escape/13 - B1 Pit 2.md
@@ -1,4 +1,4 @@
-Hold v> until through the transition utnil you are under the right statue.
+Hold v> until through the transition until you are under the right statue.
 
 [the middle is not automatable]
 
