--- a/rooms/Automation/Escape/12 - B1 Pit 1.md
+++ b/rooms/Automation/Escape/12 - B1 Pit 1.md
@@ -1,2 +1,3 @@
-Hold v til you hop the ledge, and continue after landing for at least 1 more pixel. 
-Then hold <v til you clear the rail, and switch to v>
+Hold v til you hop the ledge, and continue after landing for about 8 pixels, then hold <v til you clear the rail, and switch to v
+
+# note: v is better than v> here because if you switch early, v> will actually move you the wrong direction along the rail.
