--- a/rooms/Automation/Escape/21 - B2.md
+++ b/rooms/Automation/Escape/21 - B2.md
@@ -1,1 +1,1 @@
-After stair lag cancel, hold ^> along the wall til you can go ^ into the stairs
+Hold > out of the door. You can switch to ^> at any time or hold > until you switch to ^ to enter the stairs.
